clang/test/BSC/Positive/Driver/rewrite-bsc/extern_func_decl_in_header/extern.cbs
#include "extern_func_decl_in_header.hbs"

int Entryf1(struct S **p) {
  return 0;
}