clang/test/BSC/Negative/Coroutine/Other/Extern/Inputs/extern-file.cbs
#include "future.hbs"
#include "stdlib.h"

_Async int f(int n) {
  return 42 + n;
}
